--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Yuhao93/Sisyphus#readme",
   "dependencies": {
+    "@abandonware/bluetooth-hci-socket": "^0.5.3-10",
     "bleno": "^0.5.0",
     "google-protobuf": "^3.21.2",
     "rpio": "^2.4.2"
