--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bleno": "^0.5.0",
     "firebase-admin": "^11.7.0",
     "google-protobuf": "^3.21.2",
-    "rpio": "^2.4.2"
+    "rpio": "^2.4.2",
+    "rpio-pwm": "^1.0.4"
   }
 }
